--- a/src/index.css
+++ b/src/index.css
@@ -177,7 +177,8 @@ button {
   box-shadow: 0px 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
 }
 
-.item-text-box > h3 {
+.item-text-box > h3,
+.item-text-box > h4 {
   padding: 1rem 0;
 }
 
