--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,10 @@ button {
   border: none;
 }
 
+.padding__bottom{
+  padding-bottom: 1rem;
+}
+
 .section {
   margin: 2rem 1rem 4rem;
 }
@@ -187,11 +191,6 @@ button {
   max-height: 200px;
   border-radius: 2rem 2rem 0 0;
   aspect-ratio: 128/73;
-}
-
-.item__image:hover {
-  opacity: 0.5;
-  transition: 0.5s;
 }
 
 .item__heading {
@@ -365,6 +364,7 @@ button {
 
 .button:hover {
   background-color: var(--first-color-alt);
+  box-shadow: 0px 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
 }
 
 .button__icon {
