--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
   --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
   --container-color: #fff;
   --body-font: "Poppins", sans-serif;
+  --box-shadow: 0px 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
   --big-font-size: 2rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
@@ -178,7 +179,8 @@ button {
   position: relative;
   max-width: 350px;
   border-radius: 2rem;
-  box-shadow: 0px 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
+  box-shadow: var(--box-shadow);
+  /* box-shadow: 0px 0.5rem 1.5rem rgba(0, 0, 0, 0.5); */
 }
 
 .item-text-box > h3,
@@ -421,7 +423,7 @@ button {
 .footer__copy {
   font-size: var(--smaller-font-size);
   text-align: center;
-  color: var(--text-color-light);
+  color: #fff;
   margin-top: var(--mb-3);
 }
 
@@ -446,6 +448,7 @@ body.dark-theme {
   --container-color: hsl(var(--hue-color), 29%, 16%);
   --scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
   --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
+  --box-shadow: 0.1rem 0.1rem 0.4rem rgb(255, 255, 255);
 }
 
 .nav__btns {
