--- a/src/index.css
+++ b/src/index.css
@@ -90,11 +90,6 @@ img {
   height: auto;
 }
 
-button {
-  cursor: pointer;
-  border: none;
-}
-
 .padding__bottom{
   padding-bottom: 1rem;
 }
@@ -234,6 +229,29 @@ button {
   gap: 2rem;
 }
 
+.currentEmployer {
+  border-radius: 5px;
+  padding: 0.1rem;
+  color: green;
+  animation-name: fadeAndShine;
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+}
+
+@keyframes fadeAndShine {  
+  100% {
+    opacity: 0.5;
+  } 
+  50% {
+    opacity: 1;
+  }
+  0% {
+    opacity: 0.5;
+  }
+}
+
+
 .nav__link {
   display: flex;
   flex-direction: column;
@@ -357,29 +375,12 @@ button {
   font-size: 1.25rem;
 }
 
-.button {
-  display: inline-block;
-  background-color: var(--first-color);
-  color: #fff;
-  padding: 1rem;
-  border-radius: 0.5rem;
-  font-weight: var(--font-medium);
-}
-
-.button:hover {
-  background-color: var(--first-color-alt);
-  box-shadow: 0px 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
-}
-
 .button__icon {
   font-size: 1.25rem;
   margin-left: var(--mb-0-5);
   transition: 0.3s;
 }
 
-.button--flex {
-  display: inline-flex;
-}
 
 .footer {
   padding-top: 2rem;
@@ -485,6 +486,7 @@ body.dark-theme {
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--text-color-light);
 }
+
 
 @media screen and (max-width: 350px) {
   .container {
