--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@ body {
 }
 
 h1,
+h2,
 h3,
 h4 {
   color: var(--title-color);
@@ -137,6 +138,24 @@ img {
   cursor: pointer;
 }
 
+
+.section {
+  margin: 2rem 1rem 4rem;
+}
+
+.section__title {
+  font-size: var(--h1-font-size);
+}
+
+.section__subtitle {
+  display: block;
+  font-size: var(--small-font-size);
+}
+
+.section__title,
+.section__subtitle {
+  text-align: center;
+}
 .nav_toggle:hover {
   color: var(--first-color);
 }
@@ -149,6 +168,12 @@ img {
   margin: 0 auto;
   padding: 1rem;
   gap: 2rem;
+}
+
+.countUpTimer {
+  text-align: center;
+  margin: 1rem;
+
 }
 
 .flexbox__item {
@@ -357,9 +382,41 @@ img {
   font-size: 1.25rem;
 }
 
+.button {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  font-weight: var(--font-medium);
+}
+
+.button:hover {
+  background-color: var(--first-color-alt);
+  box-shadow: 0px 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
+}
+
 .button__icon {
   font-size: 1.25rem;
   margin-left: var(--mb-0-5);
+  transition: 0.3s;
+}
+
+.button--flex {
+  display: inline-flex;
+}
+
+.social__mediaLinks {
+  font-size: 1.25rem;
+  color: var(--first-color);
+  padding: 0.3rem;
+
+} 
+
+.social__mediaLinks:hover {
+  color: #fff;
+  background-color: var(--first-color-lighter);
+  border-radius: 1rem;
   transition: 0.3s;
 }
 
@@ -399,6 +456,8 @@ img {
 .footer__socials {
   font-size: 1.25rem;
   margin-right: var(--mb-1-5);
+  display: flex;
+  gap: 1rem
 }
 
 .footer__socials:hover {
@@ -419,10 +478,6 @@ img {
   color: #fff;
   display: flex;
 }
-
-/* .active-link {
-    color: var(--first-color);
-} */
 
 body.dark-theme {
   --first-color-second: hsl(var(--hue-color), 30%, 8%);
@@ -453,6 +508,7 @@ body.dark-theme {
 .change-theme:hover {
   color: var(--first-color);
 }
+
 
 ::-webkit-scrollbar {
   width: 0.6rem;
@@ -543,6 +599,11 @@ body.dark-theme {
   .nav {
     height: calc(var(--header-height)+5rem);
     column-gap: 1rem;
+    padding: 2rem 0
+  }
+
+  .section {
+    padding: 3rem 0 2rem;
   }
 
   .nav__icon,
